reports - コピー/all_rust_tests_output_final_utf8.txt
cargo :    Compiling engine_
rust v0.1.2 (C:\Users\trios\
.gemini\antigravity\vscode\l
oveca-copy\engine_rust_src)
発生場所 行:1 文字:1
+ cargo test > ..\reports\al
l_rust_tests_output_final.tx
t 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~
    + CategoryInfo
    : NotSpecified: (   Co
  mpiling en...ngine_rust
 _src):String) [], Remot
eException
    + FullyQualifiedErrorId
    : NativeCommandError

error[E0425]: cannot find va
lue `CHOICE_DONE` in this sc
ope
  --> src\core\logic\interpr
eter\handlers\member_state.r
s:63:44
   |
63 |                     if
ctx.choice_index == CHOICE_D
ONE || ctx.choice_index == 1
 { return Some(HandlerResult
::SetCond(false)); }
   |
                    ^^^^^^^^
^^^ not found in this scope
   |
help: consider importing thi
s constant
   |
 1 + use crate::core::logic:
:interpreter::constants::CHO
ICE_DONE;
   |

error[E0425]: cannot find va
lue `CHOICE_DONE` in this sc
ope
  --> src\core\logic\interpr
eter\handlers\member_state.r
s:63:44
   |
63 |                     if
ctx.choice_index == CHOICE_D
ONE || ctx.choice_index == 1
 { return Some(HandlerResult
::SetCond(false)); }
   |
                    ^^^^^^^^
^^^ not found in this scope
   |
note: constant `crate::qa_ve
rification_tests::tests::int
erpreter::constants::CHOICE_
DONE` exists but is inaccess
ible
  --> src\core\logic\interpr
eter\constants.rs:88:1
   |
88 | pub const CHOICE_DONE:
i16 = 99;
   | ^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^ not accessible

warning: unexpected `cfg` co
ndition value: `gpu`
 --> src\size_test.rs:1:8
  |
1 | #![cfg(feature = "gpu")]
  |        ^^^^^^^^^^^^^^^
  |
  = note: expected values fo
r `feature` are: `default`,
`extension-module`, `nn`, an
d `parallel`
  = help: consider adding `g
pu` as a feature in `Cargo.t
oml`
  = note: see <https://doc.r
ust-lang.org/nightly/rustc/c
heck-cfg/cargo-specifics.htm
l> for more information abou
t checking conditional confi
guration
  = note: `#[warn(unexpected
_cfgs)]` on by default

warning: unexpected `cfg` co
ndition value: `gpu`
 --> src\semantic_assertions
.rs:1:8
  |
1 | #![cfg(feature = "gpu")]
  |        ^^^^^^^^^^^^^^^
  |
  = note: expected values fo
r `feature` are: `default`,
`extension-module`, `nn`, an
d `parallel`
  = help: consider adding `g
pu` as a feature in `Cargo.t
oml`
  = note: see <https://doc.r
ust-lang.org/nightly/rustc/c
heck-cfg/cargo-specifics.htm
l> for more information abou
t checking conditional confi
guration

For more information about t
his error, try `rustc --expl
ain E0425`.
error: could not compile `en
gine_rust` (lib) due to 1 pr
evious error
warning: build failed, waiti
ng for other jobs to finish.
..
warning: variable does not n
eed to be mutable
   --> src\mechanics_tests.r
s:126:9
    |
126 |     let mut ctx = Abil
ityContext {
    |         ----^^^
    |         |
    |         help: remove t
his `mut`
    |
    = note: `#[warn(unused_m
ut)]` (part of `#[warn(unuse
d)]`) on by default

warning: variable does not n
eed to be mutable
  --> src\structural_tests.r
s:76:9
   |
76 |     let mut ctx = Abili
tyContext {
   |         ----^^^
   |         |
   |         help: remove th
is `mut`

warning: `engine_rust` (lib
test) generated 4 warnings
error: could not compile `en
gine_rust` (lib test) due to
 1 previous error; 4 warning
s emitted
